# bitget-rs

./: Cargo.toml  README.md
src/: account_api.rs  asset_api.rs  client.rs  consts.rs  error.rs  exceptions.rs  fund_flow_api.rs  history_api.rs  lib.rs  market_api.rs  order_api.rs  order_query_api.rs  transfer_api.rs  utils.rs  ws_api.rs
