[package]
name = "bitget_sdk"
version = "0.1.1"
edition = "2024"
description = "Bitget Exchange API SDK for Rust"
license = "MIT"
authors = ["hi <victor@telegraphs.org>"]
repository = "https://github.com/blockchain-toolbox/bitget-rs"
keywords = ["bitget", "crypto", "exchange", "api", "sdk"]
categories = ["api-bindings", "cryptography"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
base64 = "0.21"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
tokio-tungstenite = "0.20"
futures-util = "0.3"
